crates/uselesskey-core-x509/tests/snapshots/snapshots_core_x509__derive_constants.snap
---
source: crates/uselesskey-core-x509/tests/snapshots_core_x509.rs
expression: c
---
base_time_epoch_unix: 1735689600
base_time_window_days: 365
serial_number_bytes: 16
