crates/uselesskey-core-x509/tests/snapshots/snapshots_core_x509__self_signed_ca_spec_defaults.snap
---
source: crates/uselesskey-core-x509/tests/snapshots_core_x509.rs
expression: spec_snapshot(&spec)
---
subject_cn: Snap Root CA
issuer_cn: Snap Root CA
not_before_offset: DaysAgo(1)
validity_days: 3650
is_ca: true
rsa_bits: 2048
key_cert_sign: true
crl_sign: true
digital_signature: true
key_encipherment: false
sans: []
